# ing301-project-complete

./: .gitignore  README.md  pyproject.toml
client/: dashboard.py  dashboard_lightbulb.py  dashboard_temperaturesensor.py  messaging.py  smarthouse_lightbulb.py  smarthouse_temperature_sensor.py
data/: db.sql
smarthouse/: api.py  domain.py  persistence.py
tests/: demo_house.py  test_part_b.py
tests/bruno/: Delete oldes reading.bru  Get Actuator State again.bru  Get Actuator State.bru  Get all devices.bru  Get all readings.bru  Get latest sensor reading.bru  Get specific device.bru  Get specific room.bru  Info for rooms on floor.bru  Insert sensor reading.bru  Sensor Readings.bru  Turn off actuator.bru  Turn on actuator.bru
